# pipelib

./: .gitignore  README.md  pipelib.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: pipelib.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  pipelib.html
docs/_build/html/source/: pipelib.html
docs/source/: pipelib.rst
pipelib/: __init__.py  pipelib.py
