[tool.poetry]
name = "pipelib"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

include = ["pipelib/pipe.pyxres"]

[tool.poetry.dependencies]
python = "^3.10"
pyxel = "^2.0.13"

[tool.poetry.group.dev.dependencies]
Sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
